btrace: tests, version nimble-4, reporting
git-svn-id: https://gridkit.googlecode.com/svn/grid-lab/trunk/nimble@2668 4e96dbfe-9890-11de-ac5d-73b9d092dc0a